Fixed alignment issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -110,6 +110,6 @@ figcaption {
 
 #color-section {
     position: absolute;    
-    top: 40%;
-    left: 35%;
+    /*top: 40%;
+    left: 35%;*/
 }
